--- a/fence/config-default.yaml
+++ b/fence/config-default.yaml
@@ -1,14 +1,19 @@
 ---
-############################ Fence Configuration ##############################
+############################### Fence Configuration ####################################
 # This file contains configuration necessary for the fence microservice.
+# Welcome to the wonderful world of configuration!
 #
-# This is initially configured for minimal local development.
-# Read comments above each of the configuration variables to how to use them.
+# - This is initially configured for minimal local development.
+# - Descriptions for each of the configurations (if any) will be *above* the variable as
+#   comments.
+# - Some configuration variables will have examples commented out below them.
 #
 # NOTE: A lot of features will be unavailable until configured (including
-# Google login)
+#       Google login)
 
-#### General App Settings ####
+########################################################################################
+# GENERAL
+########################################################################################
 APP_NAME: 'Gen3 Data Commons'
 # Where fence microservice is deployed
 BASE_URL: 'http://localhost/user'
@@ -21,17 +26,10 @@ DB: 'postgresql://test:test@localhost:5432/fence'
 #           When deploying fence externally, simply uncomment.
 # SERVER_NAME: '{{BASE_URL}}'
 
-#### Debug Settings ####
-DEBUG: true
-MOCK_AUTH: false
-MOCK_STORAGE: true
-# allow OIDC traffic on http for development. By default it requires https.
-#
-# WARNING: Use when fence will be deployed in such a way that fence will
-#          ONLY receive traffic from internal clients and can safely use HTTP.
-AUTHLIB_INSECURE_TRANSPORT: false
+# If you want an email address to show up when an unhandled error occurs, provide one
+# here. Something like: support@example.com
+SUPPORT_EMAIL_FOR_ERRORS: null
 
-#### Encryption Key ####
 # A URL-safe base64-encoded 32-byte key for encrypting keys in db
 # in python you can use the following script to generate one:
 #     import base64
@@ -40,7 +38,21 @@ AUTHLIB_INSECURE_TRANSPORT: false
 #     print(key)
 ENCRYPTION_KEY: ''
 
-#### OpenID Connect Configuration for Clients ####
+########################################################################################
+# DEBUG SETTINGS
+########################################################################################
+DEBUG: true
+MOCK_AUTH: false
+MOCK_STORAGE: true
+# allow OIDC traffic on http for development. By default it requires https.
+#
+# WARNING: ONLY use when fence will be deployed in such a way that fence will
+#          receive traffic from internal clients and can safely use HTTP.
+AUTHLIB_INSECURE_TRANSPORT: false
+
+########################################################################################
+# OPEN ID CONNECT (OIDC) CLIENTS
+########################################################################################
 OPENID_CONNECT:
   # These Google values must be obtained from Google's Cloud Console
   # Follow: https://developers.google.com/identity/protocols/OpenIDConnect
@@ -70,7 +82,9 @@ OPENID_CONNECT:
     access_token_url: '{{api_base_url}}/oauth2/token'
     refresh_token_url: '{{api_base_url}}/oauth2/token'
 
-#### Login ####
+########################################################################################
+#  LOGIN
+########################################################################################
 # For Google use: '{{BASE_URL}}/login/google'
 # For another Fence instance use: '{{BASE_URL}}/login/fence'
 DEFAULT_LOGIN_URL: '{{BASE_URL}}/login/google'
@@ -89,44 +103,49 @@ ENABLED_IDENTITY_PROVIDERS:
       name: 'Google OAuth'
     fence:
       name: 'Fence Multi-Tenant OAuth'
-    # The following can be used for shibboleth login, simply uncomment.
-    #
-    # NOTE: Don't enable shibboleth if the deployment is not protected by
-    # shibboleth module, the shib module takes care of preventing header
-    # spoofing.
-    #
-    # shibboleth:
-    #   name: 'NIH Login'
+# The following can be used for shibboleth login, simply uncomment.
+#
+# NOTE: Don't enable shibboleth if the deployment is not protected by
+# shibboleth module, the shib module takes care of preventing header
+# spoofing.
+#
+#    shibboleth:
+#      name: 'NIH Login'
 
-#### Storage Backends and Credentials ####
+########################################################################################
+# STORAGE BACKENDS AND CREDENTIALS
+########################################################################################
 # TODO: remove STORAGES and just use STORAGE_CREDS backends...
 STORAGES:
   - '/google'
   - '/cleversafe'
 
 # Configuration for various storage systems for the backend
-# NOTE: Remove the [] and supply backends if needed. Examples provided
-#       in the comments
+# NOTE: Remove the [] and supply backends if needed. Example in comments below
 STORAGE_CREDENTIALS: []
-  # Google Cloud Storage backend:
-  # 'google':
-  #   backend: 'google'
-  #   google_project_id: 'some-project-id-12378923'
+# Google Cloud Storage backend
+#
+#  'google':
+#    backend: 'google'
+#    google_project_id: 'some-project-id-12378923'
 
-  # Cleversafe data storage backend:
-  # 'cleversafe-server-a':
-  #   backend: 'cleversafe'
-  #   aws_access_key_id: ''
-  #   aws_secret_access_key: ''
-  #   host: 'somemanager.osdc.io'
-  #   public_host: 'someobjstore.datacommons.io'
-  #   port: 443
-  #   is_secure: true
-  #   username: 'someone'
-  #   password: 'somepass'
-  #   is_mocked: true
+# Cleversafe data storage backend
+#
+#  'cleversafe-server-a':
+#    backend: 'cleversafe'
+#    aws_access_key_id: ''
+#    aws_secret_access_key: ''
+#    host: 'somemanager.osdc.io'
+#    public_host: 'someobjstore.example.com'
+#    port: 443
+#    is_secure: true
+#    username: 'someone'
+#    password: 'somepass'
+#    is_mocked: true
 
-#### Cloud API Library Configuration ####
+########################################################################################
+# CLOUD API LIBRARY (CIRRUS) CONFIGURATION
+########################################################################################
 # Required for Google endpoints (/link/google, /credentials/google, etc)
 # See directions here for setting up cirrus: https://github.com/uc-cdis/cirrus
 CIRRUS_CFG:
@@ -145,14 +164,18 @@ CIRRUS_CFG:
 # length restrictions on group names.
 GOOGLE_GROUP_PREFIX: ''
 
-#### Proxy ####
+########################################################################################
+# PROXY
+########################################################################################
 # If the api is behind firewall that need to set http proxy (see below)
 # NOTE: leave as-is to not use proxy
 HTTP_PROXY:
   host: null
   port: 3128
 
-#### AWS Buckets and Credentials ####
+########################################################################################
+# AWS BUCKETS AND CREDENTIALS
+########################################################################################
 AWS_CREDENTIALS:
   'CRED1':
     aws_access_key_id: ''
@@ -172,7 +195,9 @@ S3_BUCKETS:
     cred: 'CRED1'
     role-arn: 'arn:aws:iam::role1'
 
-#### dbGaP User Syncing Support ####
+########################################################################################
+# dbGaP USER SYNCING SUPPORT
+########################################################################################
 # "dbGaP project serves as an access gateway for researchers seeking to gain
 #  access to genotype and phenotype data"
 #
@@ -188,11 +213,15 @@ dbGaP:
     proxy_user: ''
   decrypt_key: ''
 
-#### Security and Protection ####
+########################################################################################
+# SECURITY
+########################################################################################
 SESSION_COOKIE_SECURE: true
 ENABLE_CSRF_PROTECTION: true
 
-#### Microservice Directories and Paths ####
+########################################################################################
+# MICROSERVICE DIRECTORIES AND PATHS
+########################################################################################
 # used for flask, "path mounted under by the application / web server"
 # since we deploy as microservices, fence is typically under {{base}}/user
 # this is also why our BASE_URL default ends in /user
@@ -205,19 +234,115 @@ ROOT_DIR: '/fence'
 # example value: 'https://example.com/index'
 INDEXD: null
 
-#### Multi-tenant fence setup ####
+# url where role-based access control microservice is running
+ARBORIST: null
+
+########################################################################################
+# MULTI-TENANT FENCE SETUP
+########################################################################################
 # Use when fence is *both* the client and an IDP.
 # configure this to the base URL for the provider fence
 # (i.e. ``BASE_URL`` in the provider fence config).
 OIDC_ISSUER: null
 
-#### Shibboleth Configurations ####
+########################################################################################
+# SHIBBOLETH
+########################################################################################
 # assumes shibboleth is deployed under {{BASE_URL}}/shibboleth
 SHIBBOLETH_HEADER: 'persistent_id'
 SSO_URL: 'https://auth.nih.gov/affwebservices/public/saml2sso?SPID={{BASE_URL}}/shibboleth&RelayState='
 ITRUST_GLOBAL_LOGOUT: 'https://auth.nih.gov/siteminderagent/smlogout.asp?mode=nih&AppReturnUrl='
 
-#### Email Settings ####
+########################################################################################
+# EMAIL
+########################################################################################
+# Gun Mail Service (for sending emails from fence)
+#
+# NOTE: Remove the [] and supply if needed. Example in comments below
+GUN_MAIL: []
+#  example.com:
+#    smtp_hostname: 'smtp.mailgun.org'
+#    api_key: '123456'
+#    default_login: 'postmaster@mailgun.example.com'
+#    api_url: 'https://api.mailgun.net/v3/mailgun.example.com'
+#    smtp_password: '123456'
+
+# For emails regarding users certificates
 EMAIL_SERVER: 'localhost'
 SEND_FROM: 'example@gmail.com'
 SEND_TO: 'example@gmail.com'
+
+
+########################################################################################
+# AUTHLIB CONFIGURATION (library used for OIDC flow)
+########################################################################################
+OAUTH2_JWT_ALG: 'RS256'
+OAUTH2_JWT_ENABLED: true
+OAUTH2_JWT_ISS: '{{BASE_URL}}'
+# TODO how to fill this out?
+OAUTH2_JWT_KEY: ''
+OAUTH2_PROVIDER_ERROR_URI: '/api/oauth2/errors'
+
+########################################################################################
+# DATA ACCESS: GOOGLE LINKING & SERVICE ACCOUNT REGISTRATION
+########################################################################################
+# A Google Project with controlled data access will be determined INVALID if
+# if it has a parent organization UNLESS that parent organization's ID is in this
+# whitelist.
+#
+# NOTE: Remove the [] and Google Organization IDs if needed. Example in comments below
+WHITE_LISTED_GOOGLE_PARENT_ORGS: []
+#  - '12345678910'
+
+# A Google Project with Google Service Accounts determined INVALID will result in the
+# the entire project being invalid UNLESS that service accounts's email is in this
+# whitelist.
+#
+# NOTE: Remove the [] and service account emails if needed. Example in comments below
+WHITE_LISTED_SERVICE_ACCOUNT_EMAILS: []
+#  - 'example@developer.gserviceaccount.com'
+#  - 'example@test.iam.gserviceaccount.com'
+
+# when service accounts or google projects are determined invalid, an email is sent
+# to the project owners. These settings are for that email
+REMOVE_SERVICE_ACCOUNT_EMAIL_NOTIFICATION:
+  # this domain MUST exist in GUN_MAIL config
+  domain: 'example.com'
+  from: 'do-not-reply@example.com'
+  subject: 'User service account removal notification'
+  # the {} gets replaced dynamically in the Python code to be the Project ID
+  content: >
+    Service accounts were removed from access control data because some users or
+    service accounts of GCP Project {} are not authorized to access the data sets
+    associated to the service accounts, or do not adhere to the security policies.
+  # this admin email will be included as a recipient to *any* email to anyone about
+  # service account removal.
+  #
+  # WARNING: This is NOT a bcc so the email is visible to the end-user
+  admin:
+    - 'admin@example.edu'
+
+# Service account email domains that represent a service account that Google owns.
+# These are usually created when a sepcific GCP service is enabled.
+# This is used for Service Account Validation for Data Access.
+GOOGLE_MANAGED_SERVICE_ACCOUNT_DOMAINS:
+  - 'dataflow-service-producer-prod.iam.gserviceaccount.com'
+  - 'cloudbuild.gserviceaccount.com'
+  - 'cloud-ml.google.com.iam.gserviceaccount.com'
+  - 'container-engine-robot.iam.gserviceaccount.com'
+  - 'dataflow-service-producer-prod.iam.gserviceaccount.com'
+  - 'sourcerepo-service-accounts.iam.gserviceaccount.com'
+  - 'dataproc-accounts.iam.gserviceaccount.com'
+  - 'gae-api-prod.google.com.iam.gserviceaccount.com'
+  - 'genomics-api.google.com.iam.gserviceaccount.com'
+  - 'containerregistry.iam.gserviceaccount.com'
+  - 'container-analysis.iam.gserviceaccount.com'
+  - 'cloudservices.gserviceaccount.com'
+  - 'stackdriver-service.iam.gserviceaccount.com'
+  - 'appspot.gserviceaccount.com'
+  - 'partnercontent.gserviceaccount.com'
+  - 'trifacta-gcloud-prod.iam.gserviceaccount.com'
+  - 'gcf-admin-robot.iam.gserviceaccount.com'
+  - 'compute-system.iam.gserviceaccount.com'
+  - 'gcp-sa-websecurityscanner.iam.gserviceaccount.com'
+  - 'storage-transfer-service.iam.gserviceaccount.com'
