--- a/tests/test-fence-config.yaml
+++ b/tests/test-fence-config.yaml
@@ -1,21 +1,25 @@
 ---
-############################ Fence Configuration ##############################
+############################### Fence Configuration ####################################
 # This file contains configuration necessary for the fence microservice.
+# Welcome to the wonderful world of configuration!
 #
-# This is initially configured for minimal local development.
-# Read comments above each of the configuration variables to how to use them.
+# - This is initially configured for minimal local development.
+# - Descriptions for each of the configurations (if any) will be *above* the variable as
+#   comments.
+# - Some configuration variables will have examples commented out below them.
 #
 # NOTE: A lot of features will be unavailable until configured (including
-# Google login)
+#       Google login)
 
-#### General App Settings ####
+########################################################################################
+# GENERAL
+########################################################################################
 APP_NAME: 'Gen3 Data Commons'
 # Where fence microservice is deployed
 BASE_URL: 'https://bionimbus-pdc.opensciencedatacloud.org/user'
 # postgres db to connect to
 # connection url format:
 #     postgresql://[user[:password]@][netloc][:port][/dbname]
-
 # WARNING: the test database is cleared every run
 DB: 'postgresql://postgres:postgres@localhost:5432/fence_test_tmp'
 # Name and port number of the server for Flask.
@@ -23,17 +27,10 @@ DB: 'postgresql://postgres:postgres@localhost:5432/fence_test_tmp'
 #           When deploying fence externally, simply uncomment.
 # SERVER_NAME: '{{BASE_URL}}'
 
-#### Debug Settings ####
-DEBUG: false
-MOCK_AUTH: true
-MOCK_STORAGE: false
-# allow OIDC traffic on http for development. By default it requires https.
-#
-# WARNING: Use when fence will be deployed in such a way that fence will
-#          ONLY receive traffic from internal clients and can safely use HTTP.
-AUTHLIB_INSECURE_TRANSPORT: true
+# If you want an email address to show up when an unhandled error occurs, provide one
+# here. Something like: support@example.com
+SUPPORT_EMAIL_FOR_ERRORS: null
 
-#### Encryption Key ####
 # A URL-safe base64-encoded 32-byte key for encrypting keys in db
 # in python you can use the following script to generate one:
 #     import base64
@@ -42,7 +39,21 @@ AUTHLIB_INSECURE_TRANSPORT: true
 #     print(key)
 ENCRYPTION_KEY: ''
 
-#### OpenID Connect Configuration for Clients ####
+########################################################################################
+# DEBUG SETTINGS
+########################################################################################
+DEBUG: true
+MOCK_AUTH: true
+MOCK_STORAGE: false
+# allow OIDC traffic on http for development. By default it requires https.
+#
+# WARNING: ONLY use when fence will be deployed in such a way that fence will
+#          receive traffic from internal clients and can safely use HTTP.
+AUTHLIB_INSECURE_TRANSPORT: true
+
+########################################################################################
+# OPEN ID CONNECT (OIDC) CLIENTS
+########################################################################################
 OPENID_CONNECT:
   # These Google values must be obtained from Google's Cloud Console
   # Follow: https://developers.google.com/identity/protocols/OpenIDConnect
@@ -56,7 +67,9 @@ OPENID_CONNECT:
     # this is be the allowed redirect back to fence, should not need to change
     redirect_url: '{{BASE_URL}}/login/google/login'
 
-#### Login ####
+########################################################################################
+#  LOGIN
+########################################################################################
 # For Google use: '{{BASE_URL}}/login/google'
 # For another Fence instance use: '{{BASE_URL}}/login/fence'
 DEFAULT_LOGIN_URL: '{{BASE_URL}}/login/google'
@@ -75,22 +88,25 @@ ENABLED_IDENTITY_PROVIDERS:
       name: 'Google OAuth'
     fence:
       name: 'Fence Multi-Tenant OAuth'
-    # The following can be used for shibboleth login, simply uncomment.
-    #
-    # NOTE: Don't enable shibboleth if the deployment is not protected by
-    # shibboleth module, the shib module takes care of preventing header
-    # spoofing.
-    #
+# The following can be used for shibboleth login, simply uncomment.
+#
+# NOTE: Don't enable shibboleth if the deployment is not protected by
+# shibboleth module, the shib module takes care of preventing header
+# spoofing.
+#
     shibboleth:
       name: 'NIH Login'
 
-#### Storage Backends and Credentials ####
+########################################################################################
+# STORAGE BACKENDS AND CREDENTIALS
+########################################################################################
 # TODO: remove STORAGES and just use STORAGE_CREDS backends...
 STORAGES:
   - '/google'
   - '/cleversafe'
 
 # Configuration for various storage systems for the backend
+# NOTE: Remove the [] and supply backends if needed. Example in comments below
 STORAGE_CREDENTIALS:
   'test-cleversafe':
     backend: 'cleversafe'
@@ -98,7 +114,10 @@ STORAGE_CREDENTIALS:
     backend: 'google'
     google_project_id: 'some-project-id-239870as9f23flkja8010'
 
-#### Cloud API Library Configuration ####
+
+########################################################################################
+# CLOUD API LIBRARY (CIRRUS) CONFIGURATION
+########################################################################################
 # Required for Google endpoints (/link/google, /credentials/google, etc)
 # See directions here for setting up cirrus: https://github.com/uc-cdis/cirrus
 CIRRUS_CFG:
@@ -117,14 +136,18 @@ CIRRUS_CFG:
 # length restrictions on group names.
 GOOGLE_GROUP_PREFIX: 'test'
 
-#### Proxy ####
+########################################################################################
+# PROXY
+########################################################################################
 # If the api is behind firewall that need to set http proxy (see below)
-# HTTP_PROXY:
-#   host: cloud-proxy
-#   port: 3128
-HTTP_PROXY: null
+# NOTE: leave as-is to not use proxy
+HTTP_PROXY:
+  host: null
+  port: 3128
 
-#### AWS Buckets and Credentials ####
+########################################################################################
+# AWS BUCKETS AND CREDENTIALS
+########################################################################################
 AWS_CREDENTIALS:
   'CRED1':
     aws_access_key_id: ''
@@ -146,7 +169,10 @@ S3_BUCKETS:
     cred: 'CRED2'
     role-arn: 'arn:aws:iam::707767160287:role/bucket_reader_writer_to_cdistest-presigned-url_role'
 
-#### dbGaP User Syncing Support ####
+
+########################################################################################
+# dbGaP USER SYNCING SUPPORT
+########################################################################################
 # "dbGaP project serves as an access gateway for researchers seeking to gain
 #  access to genotype and phenotype data"
 #
@@ -162,11 +188,15 @@ dbGaP:
     proxy_user: ''
   decrypt_key: ''
 
-#### Security and Protection ####
+########################################################################################
+# SECURITY
+########################################################################################
 SESSION_COOKIE_SECURE: true
 ENABLE_CSRF_PROTECTION: false
 
-#### Microservice Directories and Paths ####
+########################################################################################
+# MICROSERVICE DIRECTORIES AND PATHS
+########################################################################################
 # used for flask, "path mounted under by the application / web server"
 # since we deploy as microservices, fence is typically under {{base}}/user
 # this is also why our BASE_URL default ends in /user
@@ -174,21 +204,119 @@ APPLICATION_ROOT: '/user'
 # directory the fence code will be deployed under. used to help locate files
 ROOT_DIR: '/fence'
 # url where indexd microservice is running (for signed urls primarily)
+# NOTE: Leaving as null will force fence to default to {{BASE_URL}}/index
+#
+# example value: 'https://example.com/index'
 INDEXD: null
 
-#### Multi-tenant fence setup ####
+# url where role-based access control microservice is running
+ARBORIST: '/arborist'
+
+########################################################################################
+# MULTI-TENANT FENCE SETUP
+########################################################################################
 # Use when fence is *both* the client and an IDP.
 # configure this to the base URL for the provider fence
 # (i.e. ``BASE_URL`` in the provider fence config).
 OIDC_ISSUER: null
 
-#### Shibboleth Configurations ####
+########################################################################################
+# SHIBBOLETH
+########################################################################################
 # assumes shibboleth is deployed under {{BASE_URL}}/shibboleth
 SHIBBOLETH_HEADER: 'persistent_id'
 SSO_URL: 'https://auth.nih.gov/affwebservices/public/saml2sso?SPID={{BASE_URL}}/shibboleth&RelayState='
 ITRUST_GLOBAL_LOGOUT: 'https://auth.nih.gov/siteminderagent/smlogout.asp?mode=nih&AppReturnUrl='
 
-#### Email Settings ####
+########################################################################################
+# EMAIL
+########################################################################################
+# Gun Mail Service (for sending emails from fence)
+#
+# NOTE: Remove the [] and supply if needed. Example in comments below
+GUN_MAIL: []
+#  example.com:
+#    smtp_hostname: 'smtp.mailgun.org'
+#    api_key: '123456'
+#    default_login: 'postmaster@mailgun.example.com'
+#    api_url: 'https://api.mailgun.net/v3/mailgun.example.com'
+#    smtp_password: '123456'
+
+# For emails regarding users certificates
 EMAIL_SERVER: 'localhost'
 SEND_FROM: 'example@gmail.com'
 SEND_TO: 'example@gmail.com'
+
+
+########################################################################################
+# AUTHLIB CONFIGURATION (library used for OIDC flow)
+########################################################################################
+OAUTH2_JWT_ALG: 'RS256'
+OAUTH2_JWT_ENABLED: true
+OAUTH2_JWT_ISS: '{{BASE_URL}}'
+OAUTH2_PROVIDER_ERROR_URI: '/api/oauth2/errors'
+
+########################################################################################
+# DATA ACCESS: GOOGLE LINKING & SERVICE ACCOUNT REGISTRATION
+########################################################################################
+# A Google Project with controlled data access will be determined INVALID if
+# if it has a parent organization UNLESS that parent organization's ID is in this
+# whitelist.
+#
+# NOTE: Remove the [] and Google Organization IDs if needed. Example in comments below
+WHITE_LISTED_GOOGLE_PARENT_ORGS: []
+#  - '12345678910'
+
+# A Google Project with Google Service Accounts determined INVALID will result in the
+# the entire project being invalid UNLESS that service accounts's email is in this
+# whitelist.
+#
+# NOTE: Remove the [] and service account emails if needed. Example in comments below
+WHITE_LISTED_SERVICE_ACCOUNT_EMAILS:
+  - 'test@0'
+  - 'test@123'
+  - 'test@456'
+
+# when service accounts or google projects are determined invalid, an email is sent
+# to the project owners. These settings are for that email
+REMOVE_SERVICE_ACCOUNT_EMAIL_NOTIFICATION:
+  # this domain MUST exist in GUN_MAIL config
+  domain: 'example.com'
+  from: 'do-not-reply@example.com'
+  subject: 'User service account removal notification'
+  # the {} gets replaced dynamically in the Python code to be the Project ID
+  content: >
+    Service accounts were removed from access control data because some users or
+    service accounts of GCP Project {} are not authorized to access the data sets
+    associated to the service accounts, or do not adhere to the security policies.
+  # this admin email will be included as a recipient to *any* email to anyone about
+  # service account removal.
+  #
+  # WARNING: This is NOT a bcc so the email is visible to the end-user
+  admin:
+    - 'admin@example.edu'
+
+# Service account email domains that represent a service account that Google owns.
+# These are usually created when a sepcific GCP service is enabled.
+# This is used for Service Account Validation for Data Access.
+GOOGLE_MANAGED_SERVICE_ACCOUNT_DOMAINS:
+  - 'dataflow-service-producer-prod.iam.gserviceaccount.com'
+  - 'cloudbuild.gserviceaccount.com'
+  - 'cloud-ml.google.com.iam.gserviceaccount.com'
+  - 'container-engine-robot.iam.gserviceaccount.com'
+  - 'dataflow-service-producer-prod.iam.gserviceaccount.com'
+  - 'sourcerepo-service-accounts.iam.gserviceaccount.com'
+  - 'dataproc-accounts.iam.gserviceaccount.com'
+  - 'gae-api-prod.google.com.iam.gserviceaccount.com'
+  - 'genomics-api.google.com.iam.gserviceaccount.com'
+  - 'containerregistry.iam.gserviceaccount.com'
+  - 'container-analysis.iam.gserviceaccount.com'
+  - 'cloudservices.gserviceaccount.com'
+  - 'stackdriver-service.iam.gserviceaccount.com'
+  - 'appspot.gserviceaccount.com'
+  - 'partnercontent.gserviceaccount.com'
+  - 'trifacta-gcloud-prod.iam.gserviceaccount.com'
+  - 'gcf-admin-robot.iam.gserviceaccount.com'
+  - 'compute-system.iam.gserviceaccount.com'
+  - 'gcp-sa-websecurityscanner.iam.gserviceaccount.com'
+  - 'storage-transfer-service.iam.gserviceaccount.com'
