--- a/tests/test-fence-config.yaml
+++ b/tests/test-fence-config.yaml
@@ -51,6 +51,8 @@ ENCRYPTION_KEY: ''
 DEBUG: true
 # if true, will automatically login a user with username "test"
 MOCK_AUTH: true
+# if true, will only fake a successful login response from Google in /login/google
+MOCK_GOOGLE_AUTH: false
 # if true, will ignore anything configured in STORAGE_CREDENTIALS
 MOCK_STORAGE: false
 # allow OIDC traffic on http for development. By default it requires https.
