--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ addict==2.1.1
 boto>=2.36.0<3.0.0
 botocore>=1.7<1.10.39
 boto3>=1.5<1.6
+cached_property==1.5.1
 cryptography>=2.1.2
 enum34>=1.1.6
 Flask==0.10.1
